# my-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: geometry.h  model.h  our_gl.h  tgaimage.h
showcase_images/: Phong.tga  ShadowMap.tga
src/: geometry.cpp  main.cpp  model.cpp  our_gl.cpp  tgaimage.cpp
test/: backface_culling.cpp  barycentric.cpp  draw_lines.cpp  draw_triangles.cpp  glLookAt_GouraudShading.cpp  perspective_projection.cpp  wireframe_rendering.cpp
